# youtube-bingo

./: Makefile  docker-compose.yml  package.json
backend/: Dockerfile  package.json  pyproject.toml
backend/app/: main.py  utils.py
frontend/: .dockerignore  Dockerfile  package.json
frontend/src/: App.tsx  VideoRenderer.tsx  index.tsx  types.ts
frontend/src/utils/: utils.tsx
