[tool.poetry]
name = "backend"
version = "0.1.0"
description = "TODO"
authors = ["Robin Nicole"]
license = "GPL"

[tool.poetry.dependencies]
python = "^3.9"
youtube-transcript-api = "^0.4.1"
uvicorn = "^0.14.0"
fastapi = "^0.66.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
